[package]
name = "montagu"
version = "0.2.0"
edition = "2021"
description = "Color manipulation library (Work in Progress)"
repository = "https://github.com/davidarich/montagu"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4.3"
